<resources>
    <string name="app_name">Dukaan App</string>
    <string name="as_user">USER</string>
    <string name="as_shop">SHOP</string>
    <string name="admin">ADMIN</string>
    <string name="type_prompt">Choose a Type</string>
    <string-array name="type_arrays">
        <item>Choose a Type</item>
        <item>Coat</item>
        <item>Suits</item>
        <item>Stitched</item>
        <item>Honda</item>
        <item>Suzuki</item>
        <item>Toyota</item>
        <item>BMW</item>
        <item>Lotions</item>
        <item>Creams</item>
        <item>Base</item>
        <item>MakeupKits</item>
        <item>J.</item>
        <item>Alisha</item>
        <item>Boss</item>
        <item>Fogg</item>
        <item>Philips</item>
        <item>Haier</item>
        <item>Orient</item>
        <item>Toshiba</item>
        <item>Samsung</item>
        <item>OPPO</item>
        <item>IPhone</item>
        <item>QMobile</item>
        <item>Jhumar</item>
        <item>Matha_Patti</item>
        <item>Payal</item>
        <item>Kanta</item>


    </string-array>
    <string-array name="search_type">
        <item>Search</item>
        <item>Search Shop</item>
    </string-array>
    <string name="activity_sub_category">SubCategoryActivity</string>
    <string name="activity_register">RegisterActivity</string>
    <string name="activity_product_detail">ProductDetailActivity</string>
    <string name="activity_login">LoginActivity</string>
    <string name="activity_home_page">HomePageActivity</string>
    <string name="activity_unique_category">UniqueCategoryActivity</string>
    <string name="activity_order_page">OrderPageActivity</string>
    <string name="activity_user_maps">UserMapsActivity</string>
    <string name="activity_payment_gateway">PaymentGatewayActivity</string>
    <string name="alertPaymentDialogFragment">AlertPaymentDialogFragment</string>
    <string name="userCartFragment">UserCartFragment</string>
    <string name="userOrderFragment">UserOrderFragment</string>
    <string name="userFragment">UserFragment</string>
    <string name="shopFragment">ShopFragment</string>
    <string name="adminFragment">AdminFragment</string>
    <string name="carsFragment">CarsFragment</string>
    <string name="clothingFragment">ClothingFragment</string>
    <string name="jewellaryFragment">JewellaryFragment</string>
    <string name="takePhotoFragment">TakePhotoFragment</string>
    <string name="mobileFragment">MobileFragment</string>
    <string name="userRegistrationFragment">UserRegistrationFragment</string>
    <string name="forgotPasswordFragment">ForgotPasswordFragment</string>
    <string name="categoryMallFragment">CategoryMallFragment</string>
    <string name="categoryShopFragment">CategoryShopFragment</string>
    <string name="shareFragment">ShareFragment</string>
    <string name="cameraFragment">CameraFragment</string>
    <string name="zoomImageViewFragment">ZoomImageViewFragment</string>
    <string name="dialogFragment">DialogFragment</string>
    <string name="categoryShopProfileFragment">CategoryShopProfileFragment</string>
    <string name="categoryShopOrderFragment">CategoryShopOrderFragment</string>
    <string name="categoryShopHelpFragment">CategoryShopHelpFragment</string>
    <string name="categoryShopSupportFragment">CategoryShopSupportFragment</string>
    <string name="shopsListFragment">ShopsListFragment</string>
    <string name="cosmeticsFragment">CosmeticsFragment</string>
    <string name="electronicsFragment">ElectronicsFragment</string>
    <string name="fragrancesFragment">FragrancesFragment</string>
    <string name="categoryMapsFragment">CategoryMapsFragment</string>
    <string name="homeFragment">HomeFragment</string>
    <string name="userLocationTrackerFragment">UserLocationTrackerFragment</string>
    <string name="chatFragment">ChatFragment</string>
    <string name="checkoutFragment">CheckoutFragment</string>
    <string name="orderConfirmationFragment">OrderConfirmationFragment</string>
    <string name="username_password">username or email</string>
    <string name="shop_email">shop name or email</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="login">LOGIN</string>
    <string name="password">password</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_registration">User Registration</string>
    <string name="account_warning">Don\'t Have an Account?</string>
    <string name="contentDescription">contentDescription</string>
    <string name="signUp_options">OPTIONS</string>
    <string name="register_button">REGISTER NOW</string>
    <string name="first_name">First Name</string>
    <string name="last_name">last name</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="shopAddress">Shop Address</string>
    <string name="shopName">Shop Name/Mall Name</string>
    <string name="email_receive_warn">Don\'t Receive An Email?</string>
    <string name="mall">MALL</string>
    <string name="shop">SHOP</string>
    <string name="double_tap_to_continue_as">Double Tap to Continue as:</string>
    <string name="seller_dashboard">Seller DashBoard</string>
    <string name="welcome">Welcome</string>
    <string name="share">Share</string>
    <string name="next">Next</string>
    <string name="uploadProduct">Upload Product</string>
    <string name="select_product_category">Select Product Category</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_price">Product Price</string>
    <string name="product_warranty">Product Warranty</string>
    <string name="available_stock">Available Stock</string>
    <string name="choose_currency">Choose Currency</string>
    <string name="uploading_please_wait">Uploading... Please Wait</string>
    <string name="displayName">Name</string>
    <string name="city">City</string>
    <string name="updateProfile">Update Profile</string>
    <string name="lahore_pakistan">Lahore Pakistan</string>
    <string name="brandzpoint">BrandzPoint</string>
    <string name="fasih_feroze">Fasih Feroze</string>
    <string name="must_provide_name_address"><![CDATA[Seller Name & Shop Address are Required Fields]]></string>
    <string name="country">Country</string>
    <string name="Email">Email</string>
    <string name="cancel_order">CANCEL ORDER</string>
    <string name="generate_mall_id">Generate Mall ID</string>
    <string name="mallID">Optional Mall ID</string>
    <string name="db_users_node">users</string>
    <string name="db_user_profile_settings_node">user_profile_settings</string>
    <string name="db_shop_profile_settings_node">shop_profile_settings</string>
    <string name="db_products_node">products</string>
    <string name="db_mall_node">mall</string>
    <string name="db_cart_node">cart</string>
    <string name="db_views_node">views</string>
    <string name="db_orders_node">orders</string>
    <string name="db_stripeToken_node">stripeToken</string>
    <string name="db_FCMToken_node">FCMToken</string>
    <string name="db_field_user_name">user_name</string>
    <string name="db_field_fcm_token">fcm_token</string>
    <string name="db_field_type">type</string>
    <string name="db_field_email">email</string>
    <string name="db_field_first_name">first_name</string>
    <string name="db_field_last_name">last_name</string>
    <string name="db_field_payment_method">payment_method</string>
    <string name="db_field_user_id">user_id</string>
    <string name="db_field_profile_photo">profile_photo</string>
    <string name="db_field_products">products</string>
    <string name="db_field_scope">scope</string>
    <string name="db_field_shop_address">shop_address</string>
    <string name="db_field_city">city</string>
    <string name="db_field_country">country</string>
    <string name="db_field_admin_approved">admin_approved</string>
    <string name="db_field_shop_category">shop_category</string>
    <string name="db_field_profile_image_url">profile_image_url</string>
    <string name="db_field_mall_id">mall_id</string>
    <string name="db_field_product_name">product_name</string>
    <string name="db_field_product_category">product_category</string>
    <string name="db_field_product_image_url">product_image_url</string>
    <string name="db_field_product_description">product_description</string>
    <string name="db_field_product_price">product_price</string>
    <string name="db_field_product_warranty">product_warranty</string>
    <string name="db_field_product_stock">product_stock</string>
    <string name="db_field_timeStamp">timeStamp</string>
    <string name="db_field_product_id">product_id</string>
    <string name="db_field_product_rating">product_rating</string>
    <string name="db_field_shop_id">shop_id</string>
    <string name="db_field_order_price">order_price</string>
    <string name="db_field_order_status">order_status</string>
    <string name="db_field_order_id">order_id</string>
    <string name="upload_failed_msg">We are Really Sorry for the Inconvienience. Our Team of Experts is Analyzing your Provided Shop Details and will approve your account if provided details are accepted by our experts. You can\'t be able to upload the Products untill your Profile got approved by our team.  Thank You</string>
    <string name="successfully_created_order">Successfully Placed An Order</string>
    <string name="failure_created_order">Failure to Create An Order</string>
    <string name="warning_required_fields">All Fields are required</string>
    <string name="email_verification_required">Please verify your account by visiting your Inbox</string>
    <string name="conflict_username">That User Name is already Existent\nTry Another One</string>
    <string name="password_length_warning">Password Length Should be Minimum 6</string>
    <string name="user_email_collsion">Email is already Existent</string>
    <string name="network_error">There might be a problem with your Internet Connection. Try Reconnecting to the Internet</string>
    <string name="bad_email_format">Email is not Properly Formatted</string>
    <string name="Already_Added_to_the_Cart">Already Added to the Cart</string>
    <string name="bad_email">Bad Email</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="addedCart">Product is Successfully Added to the Cart</string>
    <string name="bad_username_password">InValid User Name or Password</string>
    <string name="shop_registration">Shop Registration</string>
    <string name="shop_already_existent">Shop/Mall is Already Present. Try to make your Shop/MAll Name Unique. Tip append numbers</string>
    <string name="clipboardToastMsg">MAll ID is copied to the ClipBoard.
        Please Refer to the ClipBoard and provide this ID to authentic Mall Shops only for Registration</string>
    <string name="facebook_app_id">1452855858183981</string>
    <string name="fb_login_protocol_scheme">fb1452855858183981</string>
    <string name="web_client_id">1042298816878-n5e12ggoeiah38525fh3vnu4hec921v0.apps.googleusercontent.com</string>
    <string name="google_maps_api_key">AIzaSyBhw2T6T59OuPOLq4Ywc6cT1dm8hHkhbws</string>
    <string name="scope_user">user</string>
    <string name="scope_shop">shop</string>
    <string name="recover_password">Please Update Your Password By Visiting Your Inbox</string>
    <string name="missing_one_field">Please Enter Email</string>
    <string name="change_password">Recover Password</string>
    <string name="mall_id">Mall-ID</string>
    <string name="shop_name">Shop Name</string>
    <string name="activity_mall">MallActivity</string>
    <string name="searchUsernameFragment">SearchUsernameFragment</string>
    <string name="userViewProductsList">userViewProductsList</string>
</resources>