<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10dp">


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10dp"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginTop="@dimen/_44dp"
                android:ems="10"
                android:hint="@string/username_password"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_marginEnd="@dimen/_10dp"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <LinearLayout
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_56dp"
                android:layout_below="@+id/password"
                android:layout_marginEnd="@dimen/_10dp"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginRight="@dimen/_10dp"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@drawable/custom_btn_std1"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="@dimen/_24sp" />

                <ProgressBar
                    android:id="@+id/loginProgress"
                    style="@style/MyProgressBarStyle"
                    android:layout_width="@dimen/_56dp"
                    android:layout_height="@dimen/_56dp"
                    android:visibility="gone" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login"
                android:layout_marginEnd="@dimen/_2dp"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginRight="@dimen/_2dp"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/don_t_have_an_account"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login"
                android:layout_marginEnd="@dimen/_2dp"
                android:layout_marginLeft="@dimen/_2dp"
                android:layout_marginRight="@dimen/_2dp"
                android:layout_marginStart="@dimen/_2dp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_toRightOf="@id/textView2"
                android:text="@string/sign_up"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/login"
                android:layout_marginEnd="@dimen/_10dp"
                android:layout_marginRight="@dimen/_10dp"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/forgot_password"
                android:textAlignment="center" />
        </RelativeLayout>

    </ScrollView>

</merge>