<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10dp">


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginTop="@dimen/_44dp"
                android:layout_marginEnd="@dimen/_10dp"
                android:background="@drawable/round_edits"
                android:ems="10"
                android:hint="@string/shop_email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/email"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/_10dp"
                android:background="@drawable/round_edits"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_below="@+id/password"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/round_button_circle_base"
                android:clickable="true"
                android:foreground="@drawable/repple_effect_trs_overal"
                android:gravity="center"
                android:orientation="horizontal">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <ProgressBar
                        android:id="@+id/loginProgress"
                        style="@style/Progressbar.White"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:indeterminateTint="@color/white"
                        android:visibility="gone" />
                </RelativeLayout>

                <!--<ProgressBar-->
                <!--android:id="@+id/loginProgress"-->
                <!--style="@style/MyProgressBarStyle"-->
                <!--android:layout_width="@dimen/_56dp"-->
                <!--android:layout_height="@dimen/_56dp"-->
                <!--android:visibility="gone" />-->

            </LinearLayout>


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginEnd="@dimen/_2dp"
                android:layout_marginRight="@dimen/_2dp"
                android:text="@string/don_t_have_an_account"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login"
                android:layout_marginStart="@dimen/_2dp"
                android:layout_marginLeft="@dimen/_2dp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginEnd="@dimen/_2dp"
                android:layout_marginRight="@dimen/_2dp"
                android:layout_toRightOf="@id/textView2"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginEnd="@dimen/_10dp"
                android:layout_marginRight="@dimen/_10dp"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />
        </RelativeLayout>

    </ScrollView>

</merge>